改回旧版本的调光机制、fix操作权切换前不能同步手柄的bug、修改keyWidget的亮灯策略

--- a/src/img.qrc
+++ b/src/img.qrc
@@ -133,5 +133,7 @@
         <file>images/总体设置-夜.png</file>
         <file>images/按钮-日.png</file>
         <file>images/按钮-夜.png</file>
+        <file>images/对话框长-日.png</file>
+        <file>images/对话框长-夜.png</file>
     </qresource>
 </RCC>
