1、修改GPIO类的功能 2、增加Buzzer类，专用蜂鸣器控制 3、增加手柄设置功能 4、新增移动端手柄读取功能

--- a/src/generalsettingwidget.ui
+++ b/src/generalsettingwidget.ui
@@ -71,8 +71,8 @@ border-style:outset;</string>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>310</y>
+     <x>200</x>
+     <y>520</y>
      <width>161</width>
      <height>171</height>
     </rect>
@@ -471,6 +471,19 @@ border-style:outset;</string>
    </property>
    <property name="text">
     <string>degree/sec</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>300</y>
+     <width>101</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>设置手柄</string>
    </property>
   </widget>
  </widget>
