--- a/src/generalsettingwidget.ui
+++ b/src/generalsettingwidget.ui
@@ -473,14 +473,17 @@ border-style:outset;</string>
     <string>degree/sec</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="pbStickSetting">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>110</x>
      <y>300</y>
      <width>101</width>
      <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: transparent;</string>
    </property>
    <property name="text">
     <string>设置手柄</string>
