--- a/src/propellerenablewidget.ui
+++ b/src/propellerenablewidget.ui
@@ -13,68 +13,6 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLineEdit" name="leenable_prop2">
-   <property name="geometry">
-    <rect>
-     <x>325</x>
-     <y>210</y>
-     <width>54</width>
-     <height>33</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leenable_prop3">
-   <property name="geometry">
-    <rect>
-     <x>325</x>
-     <y>270</y>
-     <width>54</width>
-     <height>33</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QPushButton" name="pbOK">
    <property name="geometry">
     <rect>
@@ -101,284 +39,6 @@ border-style:outset;</string>
     <string/>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lerun_prop2">
-   <property name="geometry">
-    <rect>
-     <x>263</x>
-     <y>213</y>
-     <width>27</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lerun_prop3">
-   <property name="geometry">
-    <rect>
-     <x>263</x>
-     <y>273</y>
-     <width>27</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leenable_prop1">
-   <property name="geometry">
-    <rect>
-     <x>325</x>
-     <y>150</y>
-     <width>54</width>
-     <height>33</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lerun_prop1">
-   <property name="geometry">
-    <rect>
-     <x>263</x>
-     <y>153</y>
-     <width>27</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leready_prop3">
-   <property name="geometry">
-    <rect>
-     <x>199</x>
-     <y>273</y>
-     <width>27</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leready_prop1">
-   <property name="geometry">
-    <rect>
-     <x>199</x>
-     <y>153</y>
-     <width>27</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-background-image: url(:/images/推进器启用设置-日.png);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leready_prop2">
-   <property name="geometry">
-    <rect>
-     <x>199</x>
-     <y>213</y>
-     <width>27</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lerun_rudder2">
-   <property name="geometry">
-    <rect>
-     <x>263</x>
-     <y>392</y>
-     <width>27</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leenable_rudder1">
-   <property name="geometry">
-    <rect>
-     <x>325</x>
-     <y>329</y>
-     <width>54</width>
-     <height>33</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leenable_rudder2">
-   <property name="geometry">
-    <rect>
-     <x>325</x>
-     <y>389</y>
-     <width>54</width>
-     <height>33</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lerun_rudder1">
-   <property name="geometry">
-    <rect>
-     <x>263</x>
-     <y>332</y>
-     <width>27</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QPushButton" name="pbCancel">
    <property name="geometry">
     <rect>
@@ -403,52 +63,6 @@ border-style:outset;</string>
    </property>
    <property name="text">
     <string/>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leready_rudder1">
-   <property name="geometry">
-    <rect>
-     <x>199</x>
-     <y>332</y>
-     <width>27</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leready_rudder2">
-   <property name="geometry">
-    <rect>
-     <x>199</x>
-     <y>392</y>
-     <width>27</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_1">
@@ -577,6 +191,256 @@ border-style:outset;</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wReadyProp1" native="true">
+   <property name="geometry">
+    <rect>
+     <x>199</x>
+     <y>153</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wReadyProp2" native="true">
+   <property name="geometry">
+    <rect>
+     <x>199</x>
+     <y>213</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wReadyProp3" native="true">
+   <property name="geometry">
+    <rect>
+     <x>199</x>
+     <y>273</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wReadyRudder1" native="true">
+   <property name="geometry">
+    <rect>
+     <x>199</x>
+     <y>332</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wReadyRudder2" native="true">
+   <property name="geometry">
+    <rect>
+     <x>199</x>
+     <y>392</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wRunRudder1" native="true">
+   <property name="geometry">
+    <rect>
+     <x>263</x>
+     <y>332</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wRunRudder2" native="true">
+   <property name="geometry">
+    <rect>
+     <x>263</x>
+     <y>392</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wRunProp3" native="true">
+   <property name="geometry">
+    <rect>
+     <x>263</x>
+     <y>273</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wRunProp2" native="true">
+   <property name="geometry">
+    <rect>
+     <x>263</x>
+     <y>213</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wRunProp1" native="true">
+   <property name="geometry">
+    <rect>
+     <x>263</x>
+     <y>153</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbEnableProp1">
+   <property name="geometry">
+    <rect>
+     <x>325</x>
+     <y>150</y>
+     <width>54</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 0, 0);
+border-width:0;
+border-style:outset;</string>
+   </property>
+   <property name="text">
+    <string>启用</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbEnableProp2">
+   <property name="geometry">
+    <rect>
+     <x>325</x>
+     <y>210</y>
+     <width>54</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 0, 0);
+border-width:0;
+border-style:outset;</string>
+   </property>
+   <property name="text">
+    <string>启用</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbEnableProp3">
+   <property name="geometry">
+    <rect>
+     <x>325</x>
+     <y>270</y>
+     <width>54</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 0, 0);
+border-width:0;
+border-style:outset;</string>
+   </property>
+   <property name="text">
+    <string>启用</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbEnableRudder1">
+   <property name="geometry">
+    <rect>
+     <x>325</x>
+     <y>329</y>
+     <width>54</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 0, 0);
+border-width:0;
+border-style:outset;</string>
+   </property>
+   <property name="text">
+    <string>启用</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbEnableRudder2">
+   <property name="geometry">
+    <rect>
+     <x>325</x>
+     <y>389</y>
+     <width>54</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 0, 0);
+border-width:0;
+border-style:outset;</string>
+   </property>
+   <property name="text">
+    <string>启用</string>
    </property>
   </widget>
  </widget>
