--- a/src/sensorenablewidget.ui
+++ b/src/sensorenablewidget.ui
@@ -13,99 +13,6 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLineEdit" name="leready_gypo">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>154</y>
-     <width>25</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>16</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="frame">
-    <bool>false</bool>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-   <property name="placeholderText">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leenable_gyro">
-   <property name="geometry">
-    <rect>
-     <x>287</x>
-     <y>150</y>
-     <width>52</width>
-     <height>34</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>16</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="frame">
-    <bool>false</bool>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leenable_wind">
-   <property name="geometry">
-    <rect>
-     <x>287</x>
-     <y>210</y>
-     <width>52</width>
-     <height>34</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>16</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="frame">
-    <bool>false</bool>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QPushButton" name="pbOk">
    <property name="geometry">
     <rect>
@@ -154,32 +61,6 @@ border-style:outset;</string>
    </property>
    <property name="text">
     <string/>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leready_wind">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>214</y>
-     <width>25</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>16</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 255, 0);
-border-width:0;
-border-style:outset;</string>
-   </property>
-   <property name="frame">
-    <bool>false</bool>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
@@ -292,6 +173,74 @@ border-style:outset;</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbEnableGyro">
+   <property name="geometry">
+    <rect>
+     <x>287</x>
+     <y>150</y>
+     <width>54</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 0, 0);
+border-width:0;
+border-style:outset;</string>
+   </property>
+   <property name="text">
+    <string>启用</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wReadyGypo" native="true">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>154</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wReadyWind" native="true">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>214</y>
+     <width>27</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 255, 0);
+background-image: url(:/images/推进器启用设置-日.png);
+border-width:0;
+border-style:outset;</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbEnableWind">
+   <property name="geometry">
+    <rect>
+     <x>287</x>
+     <y>210</y>
+     <width>54</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 0, 0);
+border-width:0;
+border-style:outset;</string>
+   </property>
+   <property name="text">
+    <string>启用</string>
    </property>
   </widget>
  </widget>
